--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -82,6 +82,13 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="ViewYaw",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="ViewPitch",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="ViewYaw",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="ViewYaw",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="ViewPitch",Scale=-1.000000,Key=Up)
++AxisMappings=(AxisName="ViewPitch",Scale=1.000000,Key=Down)
++AxisMappings=(AxisName="ViewZoom",Scale=1.000000,Key=MouseWheelAxis)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
