--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GameDefaultMap=/Game/Maps/gladiatorMap.gladiatorMap
 
 
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Maps/gladiatorMap.gladiatorMap
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
