--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/gladiatorMap.gladiatorMap
+GameDefaultMap=/Game/Maps/Menu.Menu
 
 
 EditorStartupMap=/Game/Maps/gladiatorMap.gladiatorMap
