Tweaked navmesh tolerence

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,3 +18,12 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/gladiator")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="gladiatorGameModeBase")
 
+[/Script/NavigationSystem.RecastNavMesh]
+bDrawPolyEdges=False
+DrawOffset=10.000000
+MaxSimplificationError=1.300000
+CellSize=10.000000
+bSortNavigationAreasByCost=True
+AgentMaxStepHeight=60.000000
+AgentMaxSlope=55.000000
+
